# bee-p

./: .gitmodules  Cargo.toml
bee-dashboard/: Cargo.toml
bee-dashboard/frontend/: README.md  package-lock.json  package.json  tsconfig.json
bee-dashboard/frontend/src/app/components/: ConfirmedMilestoneChart.tsx  Dashboard.tsx  Explorer404.tsx  ExplorerTransactionQueryResult.tsx  MemChart.tsx  Misc.tsx  Neighbor.tsx  Root.tsx  ServerMetricsChart.tsx  TPSChart.tsx  TipSelChart.tsx  Version.tsx
bee-dashboard/frontend/src/app/misc/: WS.ts
bee-dashboard/frontend/src/app/stores/: NodeStore.ts
bee-dashboard/frontend/src/assets/: index.html  index_light.html  main.css
bee-dashboard/src/: dbsize.rs  lib.rs  main.rs  tps.rs  websocket.rs
bee-dashboard/src/controller/: static_files.rs
bee-event/bee-event-derive/src/: lib.rs
bee-mqtt/: Cargo.toml  README.md
bee-mqtt/src/: lib.rs
bee-network/: Cargo.toml
bee-network/src/address/: mod.rs
bee-network/src/endpoint/: mod.rs
bee-node/: Cargo.toml
bee-node/src/: node.rs
bee-node/src/plugin/: dashboard.rs  mod.rs
bee-node/tests/: connection_tests.rs
bee-protocol/src/: events.rs
bee-protocol/src/protocol/: protocol.rs
bee-tangle/: Cargo.toml
bee-tangle/src/: tangle.rs
