[package]
name = "bee-dashboard"
version = "0.1.0-alpha"
authors = ["neumo"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "node"]
homepage = "https://www.iota.org"

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
failure = "0.1.1"
futures = "0.3.5"
futures-util = "0.3.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.44"
chrono = { version = "0.4.10", features = ["serde"] }
local-ip = "0.1"
rust-embed="5.2.0"
mime_guess =  "2"
tokio = { version = "0.2.11", features = ["sync"] }
clap = "2.32.0"
url = "2.0"
bee-common = { git = "https://github.com/iotaledger/bee.git" }
bee-protocol = { path = "../bee-protocol" }
log = "0.4.8"
async-std = "1.6.2"

[lib]
name = "bee_dashboard"
path = "src/lib.rs"